# tauri-plugin-advanced-file-manager

./: Cargo.toml  LICENSE  README.md  build.rs  package.json
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: DialogPlugin.kt  FilePickerUtils.kt  FsPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: dialog_open.toml
permissions/schemas/: schema.json
src/: lib.rs  mobile.rs
src/dialog/: commands.rs  desktop.rs  error.rs  mobile.rs  mod.rs
src/opener/: commands.rs  error.rs  mod.rs  open.rs  reveal_item_in_dir.rs  scope.rs
